k8s-react-spring-mongodb/frontend/front-deploy.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: frontend
          image: sreenathkk96/frontendreact:0.0.17  #12c for back-service name put  in localhost #13E for Elasticip and 80port #14P public ip with 80port 17 for without .env pass env
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
