k8s-react-spring-mongodb/frontend/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    component: frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
          
  type: ClusterIP
